log
Wed Apr  6 18:57:35 UTC 2022: 
 tests:  0|6
total_score: 0/70
d33f211
Wed Apr  6 19:03:21 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:43: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   HashMap * m = (HashMap*) malloc (sizeof(Hashmap));
                                           ^~~~~~~
                                           HashMap
hashmap.c:55:43: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size = NULL;
           ^
hashmap.c:57:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->capacity = NULL;
               ^
hashmap.c:58:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current = NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
0fac536
Wed Apr  6 19:03:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size = NULL;
           ^
hashmap.c:57:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->capacity = NULL;
               ^
hashmap.c:58:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current = NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
52e1b78
Wed Apr  6 19:04:21 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
bb78187
Wed Apr  6 19:04:37 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
61408ff
Wed Apr  6 19:05:06 UTC 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
afa1061
Wed Apr  6 19:05:40 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
66b5280
Wed Apr  6 19:07:27 UTC 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
f0da2a1
Wed Apr  6 19:07:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:11: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
   m->size=size;
           ^~~~
           sinl
hashmap.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b078f3e
Wed Apr  6 19:07:57 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7dced7e
Wed Apr  6 19:08:02 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c57fb5
Wed Apr  6 19:10:12 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size= NULL ;
          ^
hashmap.c:58:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current= NULL ;
             ^
cc1: all warnings being treated as errors
Compilation failed
55b7da3
Wed Apr  6 19:10:22 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3602951
Wed Apr  6 19:29:19 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4767000
Fri Apr  8 01:23:28 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
e867ea3
Fri Apr  8 01:23:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
66f3dc0
Fri Apr  8 01:34:59 UTC 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
bd0e9d3
Fri Apr  8 01:35:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cbdca1c
Fri Apr  8 01:35:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1bb8133
Fri Apr  8 01:43:12 UTC 2022: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
64a69ae
Fri Apr  8 01:43:25 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
5fc8ea9
Fri Apr  8 01:43:47 UTC 2022: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
563a886
Sat Apr  9 21:50:23 UTC 2022: 
 hashmap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
08dfe01
Sat Apr  9 21:51:03 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
2768cdf
Sat Apr  9 21:53:10 UTC 2022: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|4
total_score: 20/70
c9c2c43
Sat Apr  9 21:53:31 UTC 2022: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
141b809
Sat Apr  9 21:53:37 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
02e169f
Sat Apr  9 21:57:39 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
6c684d5
Sat Apr  9 21:58:29 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
7c28cce
Sat Apr  9 21:58:40 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
6807fa7
Sat Apr  9 22:34:56 UTC 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
f82b458
Sat Apr  9 22:35:13 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
775aee0
Sat Apr  9 22:41:09 UTC 2022: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  13|2
total_score: 50/70
0e1a473
Sat Apr  9 22:43:57 UTC 2022: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  13|2
total_score: 50/70
4c0ce0a
Sat Apr  9 22:44:27 UTC 2022: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
75022eb
Sat Apr  9 22:54:41 UTC 2022: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:11: error: unused variable ‘auxArreglo’ [-Werror=unused-variable]
   Pair ** auxArreglo = map->buckets;
           ^~~~~~~~~~
hashmap.c:64:7: error: unused variable ‘auxCapacidad’ [-Werror=unused-variable]
   int auxCapacidad = map->capacity;
       ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d51f9b1
Sat Apr  9 22:57:05 UTC 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:70:19: error: comparison between pointer and integer [-Werror]
   for (int i=0; i < auxArreglo; i++){
                   ^
hashmap.c:64:7: error: unused variable ‘auxCapacidad’ [-Werror=unused-variable]
   int auxCapacidad = map->capacity;
       ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc99d8c
Sat Apr  9 22:57:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
5333b73
